# my-ai-cli-toolkit

./: .antigravityignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Instruction.md  LICENSE  README.md  README_CN.md  README_zh.md  TODO.md  code_map.md  config.md  core.md  implementation-notes.md  install.py  install_tui.py  justfile  platforms.toml  plugin_install.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
agentkit-desktop/src-tauri/: Cargo.toml  tauri.conf.json
agentkit-desktop/src-tauri/src/: commands.rs  database.rs  error.rs  external.rs  lib.rs  logging.rs  main.rs  manager.rs  marketplace.rs  marketplace_cache.rs  models.rs  platform.rs  repository.rs  schema.sql  skill_installer.rs  sync.rs  utils.rs
agentkit-desktop/src-tauri/src/commands/: logging.rs  marketplace.rs  platform.rs  resource.rs  settings.rs
mcs/: .gitignore  Cargo.toml
mcs/mcs-core/: Cargo.toml
mcs/mcs-core/src/: activity.rs  error.rs  lib.rs  logging.rs  model.rs
mcs/mcs-core/src/config/: paths.rs  platform.rs
mcs/mcs-core/src/core/: discovery.rs  external_skills.rs  guidance.rs  install_target.rs  installer.rs  installer_tests.rs  mod.rs  prompt.rs  skill_migration.rs  skill_migration_tests.rs  skill_store.rs
mcs/mcs-tui/: Cargo.toml
mcs/mcs-tui/src/: main.rs
mcs/mcs-tui/src/tui/: actions.rs  input.rs  mod.rs  state.rs  theme.rs
mcs/mcs-tui/src/tui/popups/: diff_modal.rs  install_modal.rs  mod.rs  multi_sync.rs  platform_config.rs  prompt_modal.rs
mcs/mcs-tui/src/tui/screens/: dashboard.rs  mod.rs  platform_select.rs
mcs/mcs-tui/src/tui/widgets/: category_sidebar.rs  footer.rs  item_list.rs
mcs/mcs-web/: Cargo.toml
mcs/mcs-web/frontend/: index.html  package-lock.json  package.json  ts_error.txt  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
mcs/mcs-web/frontend/src/: App.tsx  theme.ts
mcs/mcs-web/frontend/src/api/: client.test.ts  client.ts
mcs/mcs-web/frontend/src/hooks/: useDebounce.ts  useInstallTarget.ts
mcs/mcs-web/frontend/src/i18n/: index.ts  locale.test.ts  locale.ts  translator.test.ts
mcs/mcs-web/frontend/src/pages/: DashboardPage.tsx  InstallPage.tsx  InstalledSkillsPage.tsx  MainPage.tsx  PlatformSelectPage.tsx  UnifiedInstallHubPage.tsx  installHubLogic.test.ts  installHubLogic.ts  useUnifiedInstallHub.ts
mcs/mcs-web/frontend/src/stores/: dashboardStore.ts  itemStore.ts  platformStore.ts  uiStore.ts
mcs/mcs-web/frontend/src/types/: index.ts
mcs/mcs-web/frontend/src/utils/: errorDetails.test.ts  errorDetails.ts
mcs/mcs-web/src/: dto.rs  main.rs  state.rs
mcs/mcs-web/src/api/: activity.rs  agents.rs  commands.rs  dashboard.rs  error.rs  external_skills.rs  legacy.rs  mod.rs  npx_skills.rs  platforms.rs  prompt.rs  skills.rs  skills_catalog.rs  sync.rs  system.rs
mcs/mcs-web/src/services/: activity_log.rs  mod.rs  npx_skills_cli.rs  npx_skills_inventory.rs
mcs/mcs-web/ui/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.sandbox-check.mjs
mcs/mcs-web/ui/src/: App.tsx  theme.test.ts  theme.ts
mcs/mcs-web/ui/src/api/: client.test.ts  client.ts
mcs/mcs-web/ui/src/hooks/: useDebounce.ts  useInstallTarget.test.ts  useInstallTarget.ts  useLegacyDirs.ts  useNavigateDeferred.ts  usePlatformItemsData.ts
mcs/mcs-web/ui/src/i18n/: messages.test.ts  translator.ts
mcs/mcs-web/ui/src/pages/: ActivityPage.test.tsx  ActivityPage.tsx  AgentsWorkspacePage.tsx  CommandsWorkspacePage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  InstallPage.tsx  InstalledSkillsPage.test.tsx  InstalledSkillsPage.tsx  LegacyRegistryRedirectPage.tsx  MainPage.tsx  NotFoundPage.test.tsx  NotFoundPage.tsx  NpxDiscoverPage.tsx  NpxManagePage.tsx  NpxSkillsLayout.tsx  NpxSkillsPage.test.tsx  NpxSkillsPage.tsx  PlatformManagedContentPage.test.tsx  PlatformManagedContentPage.tsx  PlatformSelectPage.test.tsx  PlatformSelectPage.tsx  UnifiedInstallHubPage.test.tsx  UnifiedInstallHubPage.tsx  installHubLogic.test.ts  installHubLogic.ts  npxSkillsFeedback.test.ts  npxSkillsFeedback.ts  useUnifiedInstallHub.ts
mcs/mcs-web/ui/src/stores/: README.md  activityStore.ts  dashboardStore.ts  itemStore.ts  npxSkillsStore.test.ts  npxSkillsStore.ts  platformStore.ts  uiStore.ts
mcs/mcs-web/ui/src/types/: index.ts
mcs/mcs-web/ui/src/utils/: activityNavigation.ts  installHubContent.ts  npxJobState.test.ts  npxJobState.ts  platformLabels.test.ts  platformLabels.ts  platformLibrary.ts  skillDescription.test.ts  skillDescription.ts  statusAggregation.ts
mcs/mcs-web/ui/tests/e2e/: loads_dashboard_page.spec.ts  loads_npx_skills_page.spec.ts  quick_install_flow.spec.ts  remove_and_maintenance_flow.spec.ts  unified_install_hub_flow.spec.ts
mcs/src/: error.rs  main.rs  model.rs
mcs/src/config/: mod.rs  paths.rs  platform.rs
mcs/src/core/: discovery.rs  fs_utils.rs  installer.rs  mod.rs  prompt.rs  skill_meta.rs
mcs/src/tui/: actions.rs  input.rs  mod.rs  state.rs  style_system.rs  theme.rs
mcs/src/tui/popups/: confirm_modal.rs  detail_modal.rs  diff_modal.rs  install_modal.rs  mod.rs  multi_sync.rs  platform_config.rs  prompt_modal.rs
mcs/src/tui/screens/: dashboard.rs  main_screen.rs  platform_select.rs
mcs/src/tui/widgets/: category_sidebar.rs  footer.rs  header.rs  item_list.rs  mod.rs  progress_bar.rs  search_bar.rs
skills/zoterosynth/: SKILL.md  pyproject.toml
skills/zoterosynth/assets/prompts/: review.md  summarize.md  synthesize.md
skills/zoterosynth/references/: ADVANCED.md  TOOLS.md  WORKFLOWS.md
skills/zoterosynth/resources/: ADVANCED.md  COMMANDS.md
skills/zoterosynth/resources/prompts/: review.md  summarize.md  synthesize.md
skills/zoterosynth/scripts/: extract_papers.py  pdf_extract.py  zotero_client.py
tools/agentkit-desktop/src-tauri/: Cargo.toml
tools/agentkit-desktop/src-tauri/capabilities/: default.json
tools/agentkit-desktop/src-tauri/icons/: icon.icns
tools/agentkit-desktop/src-tauri/src/: database.rs  external.rs  lib.rs  marketplace.rs  marketplace_cache.rs  models.rs  skill_installer.rs  sync.rs
(+2167 files in other folders)
