[workspace]
resolver = "2"
members = ["mcs-core", "mcs-tui", "mcs-web"]

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
thiserror = "2"
dirs = "6"
fs_extra = "1.3"
similar = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
