[workspace]
resolver = "2"
members = ["mcs-core", "mcs-tui", "mcs-web"]

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2+spec-1.1.0"
thiserror = "2"
dirs = "6"
fs_extra = "1.3"
similar = "3.1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
