[package]
name = "mcs-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
similar = { workspace = true }
