[package]
name = "mcs-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mcs-web"
path = "src/main.rs"

[dependencies]
mcs-core = { path = "../mcs-core" }
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
