[project]
name = "zotero-synth"
version = "2.1.0"
description = "Zotero literature management and analysis skill, powered by zotero-mcp MCP Server"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
legacy = [
    "pyzotero>=1.5.18",
    "pymupdf>=1.24.0",
]

[dependency-groups]
dev = []
