[package]
name = "agentkit-desktop"
version = "0.2.0"
description = "A cross-platform desktop application for managing AI coding tool resources"
authors = ["AgentKit Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "agentkit_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
# Tauri provides the tokio runtime; only re-export minimal features
# for potential direct use (e.g., spawn_blocking). Add features as needed.
tokio = { version = "1", features = ["rt", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
toml = "0.8"
reqwest = { version = "0.13.1", features = ["json"] }
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
strum = { version = "0.26", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
junction = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
